overflow & play-btn fix

--- a/sass/_helpers.sass
+++ b/sass/_helpers.sass
@@ -15,6 +15,9 @@
 		bottom: 50px
 
 // Extra classes:
+._page
+	overflow: hidden
+
 ._container
 	@extend %container
 
