--- a/sass/sections/_repeat.sass
+++ b/sass/sections/_repeat.sass
@@ -148,9 +148,13 @@
 		background-color: transparent
 		+trs(border-color)
 		svg
+			position: relative
+			z-index: 100
+
 			width: 28px
 			height: 35px
 			margin-left: 5px
+
 			fill: $white
 			+trs(fill)
 
